...
// SPDX-License-Identifier: MIT
//

// MARK: - Onboarding

// MARK: Welcome
"WELCOME_TITLE" = "Allergy Patch Testing";
"WELCOME_SUBTITLE" = "This is an all in one platform where you can upload pictures of your patch tests so your dermatologist can have instant access.";


"WELCOME_AREA1_TITLE" = "User Registration & Consent";
"WELCOME_AREA1_DESCRIPTION" = "This app is HIPAA-compliant, and we will ask for consent for your personal information and access to images, as well as register you with our system.";

...
// MARK: Account
"ACCOUNT_TITLE" = "Your Account";
"ACCOUNT_SUBTITLE" = "The Allergy Application demonstrates the usage of the Firebase Account Module.";
"ACCOUNT_SETUP_DESCRIPTION" = "The login and sign up buttons use the Account Login and SignUp views.";
"ACCOUNT_SIGNED_IN_DESCRIPTION" = "You are successfully signed in with the following account:";
"ACCOUNT_NEXT" = "Next";
"ACCOUNT_SIGN_UP" = "Sign Up";
"ACCOUNT_LOGIN" = "Login";

"USER_VIEW_LOADING" = "Loading user information ...";

"LOGIN_TITLE" = "Login";
"LOGIN_SUBTITLE" = "The Allergy Application demonstrates the usage of the Firebase Account Module to enable different authentication services, including an email and password-based login.";
...
